--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -53,10 +53,15 @@
 
   nav{
     background-color: var(--nav-background-color);
-    font-size: 2rem;
+    font-size: 3rem;
     display: flex;
     margin: 0%;
     padding: 0%;
+    justify-content: space-around;
+    align-items: baseline;
+    font-family: sans-serif;
+    font-size: large;
+
   }
 
 .hero img{
@@ -89,21 +94,18 @@ h2{
 .sociallinks img{
 
     width: 35%;
-    height: fit-content;
     display: flex;
-    justify-items: flex-end;
+    justify-self: flex-end;
     
 }
 
 
 .hero h1{
 
-    padding-left: 28%;
+    padding-bottom: 0%;  
 
-    padding-top: 20px;
-
-    padding-bottom: 0%;
-    
+    font-size: large;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
 }
 
@@ -210,4 +212,10 @@ input[type=submit]:hover {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
+}
+
+a{
+  text-decoration: none;
+  display: flex;
+  justify-items: flex-end;
 }
